infra/prod/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexaflow-route
  namespace: prod
spec:
  parentRefs:
    - name: nexaflow-gateway
  hostnames:
    - nexaflow.internal
    # - app.nexaflow.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /auth/
      backendRefs:
        - name: auth-service
          port: 8001
    - matches:
        - path:
            type: PathPrefix
            value: /api/inventory/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: inventory-service
          port: 8002
    - matches:
        - path:
            type: PathPrefix
            value: /api/finance/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: finance-service
          port: 8003
    - matches:
        - path:
            type: PathPrefix
            value: /api/invoice/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: invoice-service
          port: 8004
    - matches:
        - path:
            type: PathPrefix
            value: /api/ai/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ai-service
          port: 8005
    - matches:
        - path:
            type: PathPrefix
            value: /api/analytics/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: analytics-service
          port: 8006
    - matches:
        - path:
            type: PathPrefix
            value: /api/ocr/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /ocr/
      backendRefs:
        - name: ocr-service
          port: 8007
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
